# TUB-MSc_Thesis

./: README.md
SEK_01_MkI/: SEK_01_MkI.Editor.csproj  SEK_01_MkI.csproj  SEK_01_MkI.sln
SEK_01_MkI/Assets/: AerialRobot.prefab  FleetController.cs  HUDCanvas.prefab  New Material.mat  Plan012Mat 1.mat  Plan012Mat.mat  RotorMovement.cs  SEK_MkI.unity  SEK_MkII.unity  counter-terrorist@Idle Aiming.fbx  counter-terrorist@Rifle Idle.controller  counter-terrorist@Rifle Idle.fbx  ct_urban_mdl.controller  mkI.unity  mkII-dronePersp.unity  mkII-playerPersp.unity
Unity/Assets/: SEK_MkII.unity  SEK_rifle_idle.controller  SEK_rifle_idle.fbx  counter-terrorist@Idle Crouching Aiming.fbx  counter-terrorist@Rifle Idle 1.controller  (+3 more)
msc-thesis-eng/: Makefile  Readme.md  thesis.aux  thesis.bbl  thesis.blg  thesis.lof  thesis.lot  thesis.out  thesis.tex  thesis.toc
speech_recognition/: 0532.dic  0532.lm.txt  0532.vocab.txt  8283.lm  8283.sent  8283.vocab
speech_recognition_models/: 0532.log_pronounce.txt  1072.dic  1072.lm  1072.log_pronounce.txt  1072.sent.txt  1072.vocab.txt  1224.lm  1224.sent  1224.vocab  1246.dict  4182.dic  4182.lm.txt  4182.sent.txt  4777.dic  4777.lm  8283.sent  CMakeLists.txt  model.lm
src/speech_cmd/: CMakeLists.txt  cmd.launch  package.xml
src/speech_cmd/nodes/: cmd.py
utils/: gstreamer0.10-pocketsphinx_0.8.0+real-0ubuntu6_amd64.deb  gstreamer1.0-plugins-base_1.4.4-2+deb8u2_amd64.deb  pocketsphinx-hmm-en-hub4wsj_0.8-5_all.deb  pocketsphinx-lm-en-hub4_0.8.0+real-0ubuntu6_all.deb  pocketsphinx-utils_0.8.0+real-0ubuntu6_amd64.deb  readme.md
(+573 files in other folders)
